# MCMultiConfigs

./: Cargo.toml  mods_path.txt
src/: main.rs
